# global-keylogger

./: Cargo.toml  LICENSE  README.md  key_logs.sql
src/: keycode_map.rs  logger_structures.rs  main.rs
