[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = { version = "0.12.1", features = ["tokio"]}
tokio = { version = "1.28.0", features = ["full"]}
rand = { version = "0.8.5", features = ["std", "std_rng"]}
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "mysql"]}